temp fix for overlap problem on windows

--- a/entrak/static/css/report.css
+++ b/entrak/static/css/report.css
@@ -197,7 +197,7 @@
 .quarter-month span{
 	display: inline-block;
 	height: 18px;
-	width: 42px;
+	width: 41px;
 	font-size: 11pt;
 	padding-top: 4px;
 	padding-left: 7px;
